# cpp-vulkan

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  app.cpp  app.hpp  main.cpp  queueFamilies.hpp  swapchainSupportDetails.hpp  validationLayer.cpp  validationLayer.hpp  window.cpp  window.hpp
assets/shaders/: light.frag  simple.frag  simple.vert  simpleFrag.spv  simpleVertex.spv
shaders/: compile.bat  simple.frag  simple.vert  simpleFrag.spv  simpleVertex.spv
src/: CBufferImageManager.cpp  CBufferImageManager.hpp  CDevice.cpp  CDevice.hpp  CGameObject.cpp  CGameObject.hpp  CGui.cpp  CGui.hpp  CImageLoader.cpp  CImageLoader.hpp  CInstance.cpp  CInstance.hpp  CLightObject.cpp  CLightObject.hpp  CModel.cpp  CModel.hpp  CModelLoader.cpp  CModelLoader.hpp  CObject.hpp  CShaderUtils.cpp  CShaderUtils.hpp  CSwapchainSupport.cpp  CSwapchainSupport.hpp  CValidationLayer.cpp  CVulkanHelpers.cpp  CVulkanHelpers.hpp  CWindow.cpp  CWindow.hpp  Model.hpp  Primitives.cpp  Primitives.hpp  SGraphicsPipelineStates.cpp  SGraphicsPipelineStates.hpp  SQueueFamilies.hpp  app.cpp  app.hpp  appInfo.hpp  baseObjects.cpp  baseObjects.hpp  fileOps.hpp  (+11 more)
vkTools/: CMakeLists.txt  vkPrimitives.cpp  vkPrimitives.hpp  vkStructs.cpp  vkStructs.hpp  vkUtils.hpp
